[gd_scene load_steps=9 format=3 uid="uid://cj0i3bqn4ap1r"]

[ext_resource type="Script" path="res://src/perry_flap/perry_flap.gd" id="1_ym0sw"]
[ext_resource type="PackedScene" uid="uid://b0e3falqlw7c6" path="res://src/main/game_background.tscn" id="2_vrvjj"]
[ext_resource type="Script" path="res://src/perry_flap/enemy_spawn.gd" id="3_1mfvs"]
[ext_resource type="Texture2D" uid="uid://bx5cma57kljk6" path="res://textures/perry_flap/flappy_background_256_512.png" id="4_abbuh"]
[ext_resource type="PackedScene" uid="uid://bmuk80oxjv7v8" path="res://src/perry_flap/player.tscn" id="6_dekd4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_20w47"]
size = Vector2(56, 1280)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_221hg"]
size = Vector2(96, 192)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gpshr"]
size = Vector2(560, 992)

[node name="PerryFlap" type="Node2D"]

[node name="PerryFlap" type="Node2D" parent="."]
script = ExtResource("1_ym0sw")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 640)

[node name="GameBackground" parent="." instance=ExtResource("2_vrvjj")]
game_background_texture = ExtResource("4_abbuh")

[node name="EnemyDespawn" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2
script = ExtResource("3_1mfvs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDespawn"]
position = Vector2(28, 640)
shape = SubResource("RectangleShape2D_20w47")

[node name="Player" parent="." instance=ExtResource("6_dekd4")]

[node name="SpawnTimer" type="Timer" parent="."]

[node name="EnemyScoring" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyScoring"]
position = Vector2(144, 296)
shape = SubResource("RectangleShape2D_221hg")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(202, 666)

[node name="FlyZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlyZone"]
position = Vector2(360, 672)
shape = SubResource("RectangleShape2D_gpshr")

[connection signal="body_entered" from="EnemyDespawn" to="EnemyDespawn" method="_on_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="EnemyDespawn" method="_on_spawn_timer_timeout"]
[connection signal="body_entered" from="EnemyScoring" to="PerryFlap" method="_on_enemy_scoring_body_entered"]
[connection signal="body_exited" from="FlyZone" to="PerryFlap" method="_on_area_2d_body_exited"]
